log
Thu 24 Aug 2023 01:41:30 AM UTC: 
 tests:  0|6
total_score: 0/70
d452867
Thu 24 Aug 2023 02:04:32 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
654c814
Thu 24 Aug 2023 02:05:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b31daaa
Thu 24 Aug 2023 02:17:07 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:10: error: unused variable ‘current’ [-Werror=unused-variable]
   39 |   Node * current = list->head;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
79093d2
Thu 24 Aug 2023 02:20:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9c4b59
Thu 24 Aug 2023 02:25:13 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
59fc6d4
Thu 24 Aug 2023 02:29:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90111db
Thu 24 Aug 2023 02:30:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3b3f9a1
Thu 24 Aug 2023 02:31:29 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bdf670e
Thu 24 Aug 2023 02:31:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
18122ed
Thu 24 Aug 2023 02:33:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0240b4b
Thu 24 Aug 2023 02:33:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
181eb6d
Thu 24 Aug 2023 02:40:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97ce852
Thu 24 Aug 2023 02:45:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
474e47e
Thu 24 Aug 2023 02:59:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
58e71c6
Thu 24 Aug 2023 03:02:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
736d066
Thu 24 Aug 2023 03:03:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
316abb5
Thu 24 Aug 2023 03:08:54 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
86b5da0
Thu 24 Aug 2023 03:14:46 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e1d15bb
Thu 24 Aug 2023 03:19:01 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
cae6311
Thu 24 Aug 2023 03:22:01 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e8f9d06
Thu 24 Aug 2023 03:26:03 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e938927
Thu 24 Aug 2023 03:26:52 AM UTC: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
7cc9c66
Thu 24 Aug 2023 03:28:33 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
48ea4f5
Thu 24 Aug 2023 03:30:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9803bae
Thu 24 Aug 2023 03:31:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
341308b
Thu 24 Aug 2023 03:44:08 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
e137443
Thu 24 Aug 2023 04:23:09 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
3c073ed
Thu 24 Aug 2023 04:28:29 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
b911e8f
Thu 24 Aug 2023 04:34:30 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
12ac187
Thu 24 Aug 2023 04:44:08 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9a667f2
Thu 24 Aug 2023 04:46:34 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
43cebb9
Thu 24 Aug 2023 04:47:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0e3212d
Thu 24 Aug 2023 04:48:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
135ca60
Thu 24 Aug 2023 05:07:11 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
8b60ef8
Thu 24 Aug 2023 05:11:47 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
3812068
Thu 24 Aug 2023 05:13:42 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
1a0bcf2
Thu 24 Aug 2023 05:18:57 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
2af5374
Thu 24 Aug 2023 05:22:03 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
ee48650
Fri 25 Aug 2023 01:53:22 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:99:5: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   99 |     newNode->next=NULL;
      |     ^~~~~~~
      |     Node
list.c:99:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8a23880
Fri 25 Aug 2023 01:53:48 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:99:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   99 |     Node * newNode->next=NULL;
      |                   ^~
list.c:99:19: error: expected expression before ‘->’ token
list.c:100:16: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
  100 |     list->tail=newNode;
      |                ^~~~~~~
      |                Node
list.c:100:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b8e0042
Fri 25 Aug 2023 02:02:10 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
816c496
Fri 25 Aug 2023 02:03:20 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a338560
Fri 25 Aug 2023 02:04:02 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
dfefd73
Fri 25 Aug 2023 02:10:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c43a50d
Fri 25 Aug 2023 03:37:07 AM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:125:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  125 |   int variable = list->current->data;
      |                  ^~~~
list.c:126:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  126 |   if (list->current = list->head){
      |       ^~~~
list.c:138:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
  138 |   return variable;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8636e3f
